--- a/CSFirstScheme/FirstMiddleWeb/Default.html
+++ b/CSFirstScheme/FirstMiddleWeb/Default.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" href="Area/images/favicon.ico" type="image/x-icon" />
     <meta property="qc:admins" content="233322167467141166375" />
-    <link rel="stylesheet" href="Area/css/pc/bootstrap.css?v=201702181402" />
-    <link rel="stylesheet" href="Area/css/pc/pc-icon.css?v=201702181402" />
-    <link rel="stylesheet" href="Area/css/pc/n-base.css?v=201702181402" />
-    <link rel="stylesheet" href="Area/css/pc/header-footer.css?v=201702181402" />
-    <link rel="stylesheet" href="Area/css/pc/index.css?v=201702181402" />
+    <link href="Css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="Css/pc/pc-icon.css?v=201702181402" />
+    <link rel="stylesheet" href="Css/pc/n-base.css?v=201702181402" />
+    <link rel="stylesheet" href="Css/pc/header-footer.css?v=201702181402" />
+    <link rel="stylesheet" href="Css/pc/index.css?v=201702181402" />
     <script> var _hmt = _hmt || []; (function() {var hm = document.createElement("script"); hm.src = "//hm.baidu.com/hm.js?a881ff435a6b91894d3736b8f40babf4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })(); </script>
 </head>
 <body>
