--- a/CSFirstScheme/FirstMiddleWeb/Default.html
+++ b/CSFirstScheme/FirstMiddleWeb/Default.html
@@ -14,7 +14,14 @@
     <link rel="stylesheet" href="Css/pc/n-base.css?v=201702181402" />
     <link rel="stylesheet" href="Css/pc/header-footer.css?v=201702181402" />
     <link rel="stylesheet" href="Css/pc/index.css?v=201702181402" />
-    <script> var _hmt = _hmt || []; (function() {var hm = document.createElement("script"); hm.src = "//hm.baidu.com/hm.js?a881ff435a6b91894d3736b8f40babf4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })(); </script>
+    <script> var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?a881ff435a6b91894d3736b8f40babf4";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
     <!--[if lt IE 9]>
@@ -26,20 +33,17 @@
     </script>
     <header class="header">
         <div class="container clearfix">
-            <a href="Area" class="pull-left n-logo"><img src="Area/images/pc/n-logo.png"></a>
+            <a href="Area" class="pull-left n-logo"><img src="Images/banner/logos.jpg" style="height:80px;width:300px;"></a>
             <nav class="pull-right">
                 <ul class="menu">
-                    <li class="menu-list active"><a href="index.html">首页</a></li>
-                    <li class="menu-list "><a href="Area/advantage.html">产品优势</a></li>
-                    <li class="menu-list "><a href="Area/theme/overall.html">模板主题</a></li>
-                    <li class="menu-list "><a href="Area/casesite/overall.html">案例中心</a></li>
-                    <li class="menu-list "><a href="Area/partner.html">代理加盟</a></li>
-                    <li class="menu-list pricebox "><i class="iconbg"></i><a href="Area/pricingpackage.html">产品定价</a></li>
-                    <li class="menu-list "><a href="Area/news/1.html">新闻公告</a></li>
-                    <li class="menu-list"><a href="http://bbs.wqdian.com/forum-37-1.html" target="_blank">新手指南</a></li>
-                </ul>
-                <a href="http://member.wqdian.com/register.html" class="btn btn-primary">注册</a>
-                <a href="http://member.wqdian.com/passport/login.html" class="btn btn-default">登录</a>
+                    <li class="menu-list active"><a href="index.html">网站首页</a></li>
+                    <li class="menu-list "><a href="Area/advantage.html">自主招生</a></li>
+                    <li class="menu-list "><a href="Area/theme/overall.html">学校环境</a></li>
+                    <li class="menu-list "><a href="Area/casesite/overall.html">新闻动态</a></li>
+                    <li class="menu-list "><a href="Area/partner.html">关于我们</a></li>
+                    <li class="menu-list "><a href="Area/news/1.html">联系我们</a></li>
+                    </ul>
+               
             </nav>
         </div>
     </header>
@@ -57,38 +61,28 @@
             </ol>
             <div class="carousel-inner" style="background: url(images/pc/banner3bg_02.png);">
                 <div class="item bgimg-01 active">
-                    <a href="Area/news/p/11393.html" style="background: url(images/pc/banner_ali.png) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto" target="_blank">
+                    <a href="" style="background: url(images/banner/bans1.jpg) no-repeat top center;display: block; height: 550px;width: 100%; background-size:100% 550px" >
                     </a>
                 </div>
                 <div class="item bgimg-01">
-                    <a href="Area/news/p/11390.html" style="background: url(images/pc/banner-opendoor.jpg) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto" target="_blank">
+                    <a href="" style="background: url(images/banner/bans2.jpg) no-repeat top center;display: block; height:550px;width: 100%; background-size:100% 550px" >
                     </a>
                 </div>
-                <!-- 2017-2-06 注释 by daimingru -->
-                <!--<div class="item bgimg-01 active">
-                    <a href="Area/news/p/11370.html" style="background: url(images/pc/banner-newyear.jpg) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto" target="_blank">
-                    </a>
-                </div>-->
-                <!--<div class="item bgimg-01">
-                    <a href="Area/news/p/11289.html " target="_blank" style="background: url(images/pc/pay_member.jpg) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto"></a>
-                    <div class="payfor_member">
-                        <a href="Area/news/p/11289.html " target="_blank">了解更多</a>
-                    </div>
-                </div>-->
+
                 <div class="item bgimg-01">
-                    <a href="Area/advantage.html" style="background: url(images/pc/banner_wqd.png) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto" target="_blank">
+                    <a href="" style="background: url(images/banner/bans3.jpg) no-repeat top center;display: block; height:550px;width: 100%; background-size:100% 550px" >
                     </a>
                 </div>
                 <div class="item bgimg-01">
-                    <a href="Area/partner.html " style="background: url(images/pc/banner_bg1_11.jpg) no-repeat top center;display: block; height: 550px;width: 100% background-size:100% auto" target="_blank">
+                    <a href="" style="background: url(images/banner/bans4.jpg) no-repeat top center;display: block; height:550px;width: 100%; background-size:100% 550px">
                     </a>
                 </div>
             </div>
             <a class="carousel-control left" href="#myCarousel" data-slide="prev">
                 <svg version="1.1" id="_x31_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 87" enable-background="new 0 0 28 87" xml:space="preserve">
-                <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#fff" points="2.6,43.3 27.6,1.6 25.9,0.5 0.3,43.3 0.3,43.3 0.3,43.3 ,0.3,43.3 0.3,43.3 26,86.5 27.7,85.4 ">
-				</polygon>
-			</svg>
+                    <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#fff" points="2.6,43.3 27.6,1.6 25.9,0.5 0.3,43.3 0.3,43.3 0.3,43.3 ,0.3,43.3 0.3,43.3 26,86.5 27.7,85.4 ">
+				    </polygon>
+			    </svg>
             </a>
             <a class="carousel-control right" href="#myCarousel" data-slide="next">
                 <svg version="1.1" id="_x30_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 87" enable-background="new 0 0 28 87" xml:space="preserve">
@@ -633,57 +627,7 @@
                     <li><a href="http://tieba.baidu.com/f?ie=utf-8&kw=%E5%BE%AE%E4%BC%81%E7%82%B9" target="_blank">微企点吧</a></li>
                 </ul>
             </div>
-            <div class="link_items">
-                <p>友情链接</p>
-                <ol>
-                    <!-- <li><a href="http://www.eqxiu.com/" target="_blank" ><img src="../../../images/pc/footer_bg_03.png"></a></li>
-                    <li><a href="http://www.eqying.com" target="_blank" ><img src="../../../images/pc/footer_bg1_03.png"></a></li>
-                    <li><a href="http://www.zdns.cn/" target="_blank" ><img src="../../../images/pc/footer_bg2_03.png"></a></li>
-                    <li><a href="http://hixianchang.com/" target="_blank" ><img src="../../../images/pc/footer_bg3_03_03.png"></a></li>
-                    <li><a href="http://www.imooc.com/" target="_blank" ><img src="../../../images/pc/footer_bg4_03.png"></a></li>
-                    <li><a href="http://zhugeio.com/" target="_blank" ><img src="../../../images/pc/footer_bg5_03.png"></a></li>
-                    <li><a href="http://www.ebs.org.cn/" target="_blank" ><img src="../../../images/pc/footer_bg6_03.png"></a></li>
-                    <li><a href="http://www.mikecrm.com/" target="_blank" ><img src="../../../images/pc/footer_bg7_03.png"></a></li>
-                    <li><a href="http://www.weixinhost.com/" target="_blank"><img src="../../../images/pc/footer_bg10_03.png"></a></li>
-                    <li><a href="https://www.bugtags.com/" target="_blank"><img src="../../../images/pc/footer_bg8_03.png"></a></li>
-                    <li><a href="http://www.geetest.com/" target="_blank" ><img src="../../../images/pc/footer_bg9_03.png"></a></li>
-                    <li><a href="https://shimo.im/" target="_blank" ><img src="../../../images/pc/footer_bg11_03.png"></a></li>
-                    <li><a href="http://sendcloud.sohu.com/" target="_blank"><img src="../../../images/pc/footer_bg12_03.png"></a></li>
-                    <li><a href="http://sdk.cn" target="_blank"><img src="../../../images/pc/footer_bg13_03.png"></a></li>
-                    <li><a href="http://www.startup-partner.com" target="_blank"><img src="../../../images/pc/footer_bg13_05.png"></a></li>
-                    <li><a href="https://www.huoban.com" target="_blank"><img src="../../../images/pc/footer_bg13_07.png"></a></li>
-                    <li><a href="https://www.wilddog.com" target="_blank"><img src="../../../images/pc/footer_bg13_09.png"></a></li> -->
-                    <li><a href="http://www.eqxiu.com/home" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fd4f4d638ee114f3a957376775f9cb430.png"></a></li>
-                    <li><a href="http://eqying.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Ff903b96fcb8f4abe98dd7e83991a0a38.png"></a></li>
-                    <li><a href="http://www.zdns.cn/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fdd9959c327fe4c7aa5a04164ee4cf150.png"></a></li>
-                    <li><a href="http://www.hixianchang.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fb1af3e2a060b47b4b6eaf51a3d86c20a.png"></a></li>
-                    <li><a href="http://www.imooc.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fd3286f20e0a443cd8fd0578431d67f2e.png"></a></li>
-                    <li><a href="https://zhugeio.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F7e3c9742f68a4de78a648cf14a38e05d.png"></a></li>
-                    <li><a href="http://www.ebs.org.cn/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fb4ea0f80b7144950ade3a1f18a6a5d15.png"></a></li>
-                    <li><a href="http://www.mikecrm.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fc5868956114d42c0bab607cf9acf7320.png"></a></li>
-                    <li><a href="http://www.weixinhost.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fb757fb90f85049f6b60b8fbba95c9e7f.png"></a></li>
-                    <li><a href="https://www.bugtags.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F050e4df3318d49ba8e67012ca2c47a00.png"></a></li>
-                    <li><a href="http://www.geetest.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F8f11b96522a24b6d956d8af369cdaab5.png"></a></li>
-                    <li><a href="https://shimo.im/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fd841d6aec5bc4c3d8abf514b47db4dca.png"></a></li>
-                    <li><a href="http://www.sendcloud.net" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F902371240fda465a8b080b7a46bf787b.png"></a></li>
-                    <li><a href="https://www.sdk.cn/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F3%2F0%2F06d29ee1c53440ac911d11f8699187c8.cn.png"></a></li>
-                    <li><a href="http://www.startup-partner.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F9b042b7720e145cdad85a8fe44e5ad2e.png"></a></li>
-                    <li><a href="https://www.huoban.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fcae5aff4063f43a1aad68b739c3af19d.png"></a></li>
-                    <li><a href="https://www.wilddog.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F173b36e1214c4bdbad15b9fd3a2489c4.png"></a></li>
-                    <li><a href="http://www.leangoo.com" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F70c1e149bb1a4c6098c842b10a148b1a.png"></a></li>
-                    <li><a href="http://www.chanpin100.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Feb1b6f0dd9e544eba9592a86444fcec5.png"></a></li>
-                    <li><a href="http://www.easemob.com" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fedc9398aa2544149a615f3c62f9f3c4b.png"></a></li>
-                    <li><a href="http://www.pmcaff.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fca8a4796826941c9b603252d5e679429.png"></a></li>
-                    <li><a href="https://www.juhe.cn/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fb38a42d75f7d44c889d417f1ad0a9a1b.png"></a></li>
-                    <li><a href="http://www.xiguaji.com/?chl=weiqidian" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fb648d6c3f4b344afad494e8db50ef5c3.png"></a></li>
-                    <li><a href="http://www.devstore.cn/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Ff491ef09100c4f0fa43a1d69d910b193.png"></a></li>
-                    <li><a href="https://weichouji.sina.com/rongzi" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fefbdb1c3800247bf829d54aaba4344f5.png"></a></li>
-                    <li><a href="http://www.tuicool.com/" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Fd226da0f9360487dbc0867c55869b2a3.png"></a></li>
-                    <li><a href="http://www.thinksaas.cn" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F304176a5ad8b4711a7f302c96382df1b.png"></a></li>
-                    <li><a href="https://segmentfault.com" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2Ff0e17325be4347b4a13d3ddd125e8b51.png"></a></li>
-                    <li><a href="http://www.kuaishang.cn/index.html" target="_blank"><img src="http://u1001-admin.ktb.wqdian.net/qngroup001%2Fu1001%2F1%2F0%2F3793501866ba48569354445a14ecbb50.png"></a></li>
-                </ol>
-            </div>
+           
         </div>
         <p class="address">
             Copyright&nbsp;&copy;&nbsp;2015-2017 wqdian.com All Rights Reserved 微企点版权所有 <a href="http://www.miibeian.gov.cn" target="_blank">京ICP备09107995号-43</a> 京公网安备11010802021262号 <span id="kx_verify"></span>
@@ -730,9 +674,17 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
     </script>
-    <script type="text/javascript" src="js/pc/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="js/pc/bootstrap.min.js"></script>
+
+    <script src="Scripts/pc/jquery-1.11.2.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="js/pc/pc-comm.js?v=201702181402"></script> -->
-    <script> $(function(){$(".tab").on("click","li",function(){var $this = $(this); $this.addClass("active").siblings().removeClass("active"); $this.parent().siblings().find(".tab-item").eq($this.index()).show().siblings().hide(); }); }) </script>
+    <script>
+        $(function () {
+            $(".tab").on("click", "li", function ()
+            {
+                var $this = $(this); $this.addClass("active").siblings().removeClass("active");
+                $this.parent().siblings().find(".tab-item").eq($this.index()).show().siblings().hide();
+            });
+        }) </script>
 </body>
 </html>
