修改后台代码

--- a/CSFirstScheme/FirstMiddleWeb/Admin/index.html
+++ b/CSFirstScheme/FirstMiddleWeb/Admin/index.html
@@ -56,7 +56,9 @@
 
 
         function setFrmUrl(url,content_name) {
-            $('#frm_content').attr('src', url);
+            $('#frm_content').attr('src', url + "?ts=" + new Date().getTime());
+            $('#frm_content').css("height", $(window).height() - 150);
+
             $("#a_content_name").html(content_name);
         }
 
@@ -157,12 +159,13 @@
 
 
 
-
+           
             <footer>
                 <hr>
                 <p class="pull-right">收藏<a href="#" title="长沙一中" target="_blank">长沙一中</a></p>
-                <p>© 2014 <a href="#" target="_blank">欣盛</a></p>
+                <p>© 2017 <a href="#" target="_blank">欣盛</a></p>
             </footer>
+       
         </div>
 
 
