--- a/CSFirstScheme/FirstMiddleWeb/Admin/pages/information/index.html
+++ b/CSFirstScheme/FirstMiddleWeb/Admin/pages/information/index.html
@@ -8,9 +8,33 @@
     <script src="../../lib/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js" type="text/javascript"></script>
 
+   
+
     <script type="text/javascript">
         $(function () {
-            alert("资讯管理index");
+            //alert("资讯管理index");
+
+            $("#btn_test").click(function () {
+                var params = {
+                    action: "InformationResult",
+                    Method: "Select",
+                    ts:new Date().getTime()
+                };
+                $.get("../../handler/AdminHandler.ashx", params, function (result) {
+                    alert(result.message);
+                }, 'json');
+            });
+
+            $("#btn_add").click(function () {
+                var params = {
+                    action: "InformationResult",
+                    Method: "Add",
+                    ts: new Date().getTime()
+                };
+                $.post("../../handler/AdminHandler.ashx", params, function (result) {
+                    alert(result.message);
+                }, 'json');
+            });
         });
 
     </script>
@@ -23,9 +47,36 @@
         <div style="width:100%;height:1000px;">
 
             资讯管理
-        </div>
+            <p>
+                <a id="btn_add"  href="#" data-toggle="modal" class="btn btn-primary btn-large">添加</a>
+            </p>
 
+            <p>
+                <a id="btn_test" href="#" data-toggle="modal" class="btn btn-primary btn-large">测试</a>
+            </p>
+        </div>
+      
     </form>
 
+
+
+    <div class="container">
+        <h2>我是拟态框的例子</h2>
+        <div id="example" class="modal hide fade in" style="display:none;">
+            <div class="modal-header">
+                <a class="close" data-dismiss="modal">X</a>
+                <h3>我是拟态框的头部</h3>
+            </div>
+            <div class="modal-body">
+                <h4>我是拟态框的中间部分</h4>
+                <p>我是描述部分</p>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn btn-success">成功</a>
+                <a href="#" class="btn" data-dismiss="modal">关闭</a>
+            </div>
+        </div>
+  
+    </div>
 </body>
 </html>
